<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Pure Harvest</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="products_list_home">Discover New Products</string>
    <string name="carousel_top_sold">Top 10 Best Sellers</string>
    <string name="rating_format">⭐ %.1f</string>
    <string name="carousel_special_offers">Special Offers</string>
    <string name="discount_format">-%d%%</string>
    <string name="title_dashboard">Company</string>
    <string name="title_account">Account</string>
    <string name="title_activity_example">ExampleActivity</string>
    <string name="settingsButton">Settings</string>
    <string name="languageTV">Change language</string>
    <string name="hint_create_product_name">Nombre del producto</string>
    <string name="hint_create_product_rating">Puntuación (1 a 5)</string>
    <string name="hint_create_product_description">Descripción (opcional)</string>
    <string name="btn_create_product_select_images">Seleccionar imágenes (máx 5)</string>
    <string name="btn_create_product">Crear producto</string>
    <string name="navigation_title_string">Past Orders</string>
    <string name="hint_certifications">Certificaciones/Premios (opcional)</string>
    <string name="hint_create_product_flavors">Sabores y aromas (opcional)</string>
    <string name="hint_create_product_acidity">Acidez (opcional)</string>
    <string name="hint_create_product_body">Cuerpo (opcional)</string>
    <string name="hint_create_product_aftertaste">Post-gusto (opcional)</string>
    <string name="hint_create_product_ingredients">Ingredientes (opcional)</string>
    <string name="hint_create_product_preparation">Preparación (opcional)</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="default_web_client_id">1010691427014-drl8n6dpoius89e3a1g6c30qefigivch.apps.googleusercontent.com</string>
    <string name="facebook_app_id">fb617382781329733</string>
    <string name="facebook_client_token">0c783f4da01a28487465dc7a97957533</string>
    <string name="email">Email</string>
    <string name="title_shopping_cart">Shopping Cart</string>
    <string name="placeholder_item_title">[PLACEHOLDER]</string>
    <string name="cart_price_title">Price</string>
    <string name="placeholder_item_price">[¢0.000]</string>
    <string name="placeholder_item_amount">[1]</string>
    <string name="checkout_total">Total ₡%1$.2f</string>
    <string name="colones" translatable="false">₡%1$.2f</string>
    <string name="title_shopping_cart_clear">Clear Cart</string>
    <string name="shopping_cart_clear_confirmation_dialog_message">Are you sure you want to clear your shopping cart?</string>
    <string name="product_image">Product image</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="title_harvest">Harvest</string>
    <string name="login_button_text">Log In</string>
    <string name="title_pure">Pure</string>
    <string name="google_title">Google</string>
    <string name="todo">TODO</string>
    <string name="english">English</string>
    <string name="hello_again">Hello Again!</string>
    <string name="welcome_back_we_ve_missed_you">Welcome back, we’ve missed you!</string>
    <string name="password">password</string>
    <string name="recovery_password">Recovery password</string>
    <string name="sign_in">Sign in</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="not_a_member">Not a member?</string>
    <string name="register_now">Register Now</string>
    <string name="facebook">Facebook</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cNameL">Company name</string>
    <string name="placeholder_name">Name</string>
    <string name="placeholder_phone">Phone</string>
    <string name="placeholder_address">Address</string>
    <string name="placeholder_map">Map</string>
    <string name="placeholder_error">Error</string>
    <string name="not_available_short">N/A</string>
    <string name="order_name_prefix">Product ID: </string>
    <string name="order_user_prefix">User: </string>
    <string name="view_order_details_for">View order details: %s</string>
    <string name="error_loading_orders">Error loading orders.</string>
    <string name="no_orders_yet_company">You do not have any registered orders yet</string>
    <string name="title_my_orders">My Orders</string>
    <string name="content_description_back_button">Back</string>
    <string name="order_id_prefix">ID: </string>
    <string name="order_doc_id_prefix">Order ID: </string>
    <string name="button_profile">Profile</string>
    <string name="button_products">Products</string>
    <string name="label_product_name">Product Name</string>
    <string name="label_product_type">Type</string>
    <string name="label_product_price">Price</string>
    <string name="label_product_acidity">Acidity</string>
    <string name="label_product_description">Description</string>
    <string name="hint_edit_product_name">Enter product name</string>
    <string name="hint_edit_product_type">Enter product type</string>
    <string name="hint_edit_product_price">Enter product price</string>
    <string name="hint_edit_product_acidity">Enter acidity level</string>
    <string name="hint_edit_product_description">Enter product description</string>
    <string name="button_save_product">Save Product</string>
    <string name="back_button_content_description">Back</string>
    <string name="title_product_list">My Products</string>
    <string name="empty_product_list">You haven\'t added any products yet.</string>
    <string name="manage_images">Manage Images</string>
    <string name="product_name">Product Name</string>
    <string name="product_type">Product Type</string>
    <string name="product_description">Description</string>
    <string name="product_ingredients">Ingredients</string>
    <string name="product_preparation">Preparation</string>
    <string name="product_price">Price</string>
    <string name="product_acidity">Acidity</string>
    <string name="product_body">Body</string>
    <string name="product_aftertaste">Aftertaste</string>
    <string name="delete_product">Delete Product</string>
    <string name="product_image_description">Product image</string>
    <string name="cd_back_button">Back button</string>
    <string name="cd_product_image">Product image</string>
    <string name="button_manage_images">Manage Images</string>
    <string name="hint_description">Description</string>
    <string name="hint_ingredients">Ingredients</string>
    <string name="hint_preparation">Preparation</string>
    <string name="hint_price">Price</string>
    <string name="hint_acidity">Acidity</string>
    <string name="hint_body">Body</string>
    <string name="hint_aftertaste">Aftertaste</string>
    <string name="button_delete_product">Delete Product</string>
    <string name="cd_back_button_profile">Back button for profile</string>
    <string name="label_company_name_required">Company Name *</string>
    <string name="hint_current_name">Current Name</string>
    <string name="label_slogan_optional">Slogan (Optional)</string>
    <string name="hint_current_slogan">Current Slogan</string>
    <string name="label_phone_number_required">Phone Number *</string>
    <string name="hint_current_phone_number">Current Number</string>
    <string name="label_email_optional">Email (Optional)</string>
    <string name="hint_current_email">Current Email</string>
    <string name="label_address_required">Address *</string>
    <string name="hint_current_address">Current Address</string>
    <string name="label_map_address_required">Map Address *</string>
    <string name="hint_current_map_address">Current map address</string>
    <string name="button_save_changes">Save Changes</string>
    <string name="button_cancel">Cancel</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="cd_back_button_manage_images">Back button for manage images</string>
    <string name="title_manage_images">Manage Images</string>
    <string name="cd_image_slot_1">Image 1</string>
    <string name="cd_image_slot_2">Image 2</string>
    <string name="cd_image_slot_3">Image 3</string>
    <string name="cd_image_slot_4">Image 4</string>
    <string name="cd_image_slot_5">Image 5</string>
    <string name="text_slot_empty">Empty</string>
    <string name="button_change">Change</string>
    <string name="button_delete">Delete</string>
    <string name="cd_back_button_options">Back button for product options</string>
    <string name="title_manage_products">Manage Products</string>
    <string name="button_see_my_products">See My Products</string>
    <string name="button_see_company_orders">See company orders</string>
    <string name="cd_back_button_profile_view">Back button to view profile</string>
    <string name="cd_profile_image">Profile image</string>
    <string name="button_change_photo">Change Photo</string>
    <string name="button_delete_photo">Delete Photo</string>
    <string name="label_contact_information">Contact Information</string>
    <string name="label_phone">Phone:</string>
    <string name="label_email">Email:</string>
    <string name="label_address">Address:</string>
    <string name="label_map">Map:</string>
    <string name="text_view_on_map">View on Map</string>
    <string name="button_edit_profile">Edit Profile</string>
    <string name="title_profile">Profile</string>
    <string name="button_view_details">View Details</string>
    <string name="label_order_id_prefix">Order ID:\u0020</string>
    <string name="label_user_id_prefix">User ID:\u0020</string>
    <string name="format_order_id">Order ID: %s</string>
    <string name="format_user_id">User ID: %s</string>
    <string name="tools_text_order_id_example">Order ID: ABCxyz123verylongdocumentidexample</string>
    <string name="tools_text_user_id_example">User ID: user_very_long_id_example_which_might_be_truncated</string>
    <string name="tools_text_date_example">Oct 27, 2023, 10:30 AM</string>
    <string name="cd_product_item_image">Product image</string>
    <string name="button_manage">Manage</string>
    <string name="tools_text_product_name_example_long">Long Product Name That Might Take Two Lines</string>
    <string name="tools_text_product_price_example">$12.00</string>
    <string name="toast_product_added_successfully">¡Product added successfully!</string>
    <string name="toast_error_adding_product">Error when adding the product: %s</string>
    <string name="error_fields_cannot_be_empty">The fields cannot be empty.</string>
    <string name="error_invalid_number_format">Number format invalid for price</string>
    <string name="error_invalid_product_id">Error: Invalid product ID.</string>
    <string name="error_cannot_delete_product_now">The product cannot be deleted at this time.</string>
    <string name="dialog_title_confirm_deletion">Confirm Deletion</string>
    <string name="settings">Settings</string>
    <string name="company_products">Company Products</string>
    <string name="company_orders">Company Orders</string>
    <string name="company_buyers_list">See buyers list</string>
    <string name="company_profile">Company profile</string>
    <string name="price_range">Price Range</string>
    <string name="filter_by_name">Filter by Name</string>
    <string name="filter_by_type">Filter by Type</string>
    <string name="filter_by_coffee_acidity">Filter by Coffee Acidity</string>
    <string name="base_price_slider">₡10,000</string>
</resources>