<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.Profile.EditProfileFragment">

        <ImageButton
            android:id="@+id/backButtonEdit"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_arrow_back_24"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/cd_back_button_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp" />

        <TextView
            android:id="@+id/companyTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_company_name_required"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backButtonEdit" />

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_current_name"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@+id/companyTV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_slogan_optional"
            app:layout_constraintTop_toBottomOf="@+id/nameInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/sloganInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_current_slogan"
            android:inputType="textMultiLine"
            android:minLines="2"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_phone_number_required"
            app:layout_constraintTop_toBottomOf="@+id/sloganInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/numberInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_current_phone_number"
            android:inputType="phone"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_email_optional"
            app:layout_constraintTop_toBottomOf="@+id/numberInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_current_email"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_address_required"
            app:layout_constraintTop_toBottomOf="@+id/emailInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/adressInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_current_address"
            android:inputType="textPostalAddress"
            app:layout_constraintTop_toBottomOf="@+id/textView12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_map_address_required"
            app:layout_constraintTop_toBottomOf="@+id/adressInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/mapAdressInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_current_map_address"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@+id/textView13"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/saveChangesBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/leaf_green"
            android:text="@string/button_save_changes"
            app:layout_constraintTop_toBottomOf="@+id/mapAdressInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cancelBtn" />

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/leaf_green"
            android:text="@string/button_cancel"
            app:layout_constraintTop_toBottomOf="@+id/mapAdressInput"
            app:layout_constraintStart_toEndOf="@+id/saveChangesBtn"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>