<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/advancedFiltersLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/white"
    android:visibility="gone">

    <TextView
        android:id="@+id/priceRangeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_range"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        android:textColor="@android:color/black" />

    <com.google.android.material.slider.Slider
        android:id="@+id/priceSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:valueFrom="0"
        android:valueTo="20000"
        android:stepSize="500" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginVertical="12dp" />

    <TextView
        android:id="@+id/priceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/base_price_slider"
        android:layout_marginBottom="8dp"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupFilters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:singleSelection="false"
        app:chipSpacing="8dp">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipFilterName"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:text="@string/filter_by_name"
            android:checkable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipFilterType"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:text="@string/filter_by_type"
            android:checkable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipFilterAcidity"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:text="@string/filter_by_coffee_acidity"
            android:checkable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.chip.ChipGroup>
</LinearLayout>
